# csp-forecaster

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: airpassengers_csp_colab.ipynb  airpassengers_intervals_comparison.ipynb
src/csp_forecaster/: __init__.py  core.py  nixtla.py
tests/: test_cspmodel_orientation.py  test_fast_equivalence.py  test_legacy_golden.py  test_legacy_reproducibility.py  test_nixtla_adapter.py  test_numba_equivalence.py  test_options.py  test_orientation_correction.py
