[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "csp-forecaster"
version = "0.1.0"
description = "Conformal Seasonal Pools (CSP): a training-free probabilistic time-series forecaster"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Valery Manokhin" }]
dependencies = ["numpy>=1.21"]

[project.optional-dependencies]
test = ["pytest>=7"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
